--- a/index.html
+++ b/index.html
@@ -291,20 +291,20 @@
 
     <div class="main" style="z-index: -1;">
 
-        <img class="graund" src="/class - 6 cricket/img/Untitled-1.jpg" alt="my graund">
-        <img class="bat" src="/class - 6 cricket/img/bat.png" alt="my ball">
-        <img class="ball" src="/class - 6 cricket/img/my ball.webp" alt="my bat">
-        <img class="stump" src="/class - 6 cricket/img/stump .png" alt="">
+        <img class="graund" src="./img/Untitled-1.jpg" alt="my graund">
+        <img class="bat" src="./img/bat.png" alt="my ball">
+        <img class="ball" src="./img/my ball.webp" alt="my bat">
+        <img class="stump" src="./img/stump .png" alt="">
 
-        <img class="filder" src="/class - 6 cricket/img/filder.png" alt="my filder">
-        <img class="boll-fild" src="/class - 6 cricket/img/boll-fild.png" alt="">
-        <img class="fild-sad" src="/class - 6 cricket/img/sad img.png" alt="">
+        <img class="filder" src="./img/filder.png" alt="my filder">
+        <img class="boll-fild" src="./img/boll-fild.png" alt="">
+        <img class="fild-sad" src="./img/sad img.png" alt="">
 
         <div class="six-div">
-            <img class="six" src="/class - 6 cricket/img/six.png" alt="six">
+            <img class="six" src="./six.png" alt="six">
         </div>
 
-        <img class="man-six" src="/class - 6 cricket/img//man-six.png" alt="">
+        <img class="man-six" src="./img//man-six.png" alt="">
     </div>
 
 </body>
